--- a/.github/workflows/backend-ecr.yml
+++ b/.github/workflows/backend-ecr.yml
@@ -37,3 +37,31 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker push 215572308714.dkr.ecr.ap-southeast-2.amazonaws.com/devconnect-backend:latest
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST_IP }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # 1. Login to ECR (Refresh token)
+            aws ecr get-login-password --region ap-southeast-2 | docker login --username AWS --password-stdin 215572308714.dkr.ecr.ap-southeast-2.amazonaws.com
+
+            # 2. Pull the latest image
+            docker pull 215572308714.dkr.ecr.ap-southeast-2.amazonaws.com/devconnect-backend:latest
+
+            # 3. Stop & Remove existing container
+            docker stop devconnect-backend || true
+            docker rm devconnect-backend || true
+
+            # 4. Run new container
+            docker run -d --name devconnect-backend -p 5000:5000 --env-file .env 215572308714.dkr.ecr.ap-southeast-2.amazonaws.com/devconnect-backend:latest
+
+            # 5. Verify deployment
+            docker ps
