--- a/.github/workflows/backend-ecr.yml
+++ b/.github/workflows/backend-ecr.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.HOST_IP }}
-          username: ${{ secrets.EC2_USER }}
+          host: 13.211.197.100
+          username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             # 1. Login to ECR (Refresh token)
